Require older Java version (1.8).